# telnet-did-demo

./: Cargo.toml  DID W3C MVP Project Plan.markdown  Makefile  README.md  SCENARIOS.md
crates/did/: Cargo.toml
crates/did/src/: bbs_vp.rs  crypto.rs  document.rs  identifier.rs  lib.rs  main.rs  presentation.rs  qr_code.rs  request.rs  verifiable_presentation.rs  verifiable_registry.rs  verification_credential.rs
crates/telnet/: Cargo.toml
crates/telnet/src/: client.rs  lib.rs  main.rs  main_loop.rs  telnet.rs  util.rs
crates/web/: Cargo.toml
crates/web/configuration/: base.yaml
crates/web/docs/: ms_token_resp.json
crates/web/src/: configuration.rs  routes.rs  startup.rs
docs/sequence_diagram/: did_create.txt  did_delegate.txt  selective_disclosures.txt
