[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.85"
edition = "2021"

[workspace.dependencies]
# local crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rand_core = { version = "0.6.4", default-features = false }
base58 = "0.2.0"
multibase = "0.9.1"
chrono = "0.4.41"
uuid = "1.16.0"
qrcode = "0.14.1"
image = "0.25.6"
# Error handler
thiserror = "1"
anyhow = "1"
ssi = { version = "0.11.0", features = ["bbs"] }
# Async runtime
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
# Testing
async-std = "1.9"
json-syntax = "0.12.5"

# non-local crates
