[package]
name = "did"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
ed25519-dalek = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
base58 = { workspace = true }
multibase = { workspace = true }
chrono = { workspace = true }
qrcode = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
ssi = { workspace = true }
tokio = { workspace = true }
json-syntax = { workspace = true }

[dev-dependencies]
async-std = { workspace = true, features = ["attributes"] }
