[package]
name = "telnet"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
bytes = "1.0.1"
rand = { version = "0.8" }
futures = "0.3.12"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
thiserror = { version = "1" }
did = { path = "../did" }
network-interface = { workspace = true }
default-net = { workspace = true }

[dev-dependencies]
mockall = "0.13" # For mocking in tests
